--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -401,6 +401,291 @@ d among this type of software we have to choose this license.
 Revision System : Git
 \end_layout
 
+\begin_layout Standard
+In software development, Git (/ɡɪt/) is a distributed revision control and
+ source code management (SCM) system with an emphasis on speed.[3] Git was
+ initially designed and developed by Linus Torvalds for Linux kernel development
+; it has since been adopted by many other projects.
+ Every Git working directory is a full-fledged repository with complete
+ history and full revision tracking capabilities, not dependent on network
+ access or a central server.
+ Git is free software distributed under the terms of the GNU General Public
+ License version 2.
+\end_layout
+
+\begin_layout Standard
+Design
+\end_layout
+
+\begin_layout Standard
+Git's design was inspired by BitKeeper and Monotone.[20][21] Git was originally
+ designed as a low-level version control system engine on top of which others
+ could write front ends, such as Cogito or StGIT.[21] However, the core Git
+ project has since become a complete revision control system that is usable
+ directly.[22] Characteristics
+\end_layout
+
+\begin_layout Standard
+Git's design is a synthesis of Torvalds's experience with Linux in maintaining
+ a large distributed development project, along with his intimate knowledge
+ of file system performance gained from the same project and the urgent
+ need to produce a working system in short order.
+ These influences led to the following implementation choices:
+\end_layout
+
+\begin_layout Standard
+Strong support for non-linear development Git supports rapid branching and
+ merging, and includes specific tools for visualizing and navigating a non-linea
+r development history.
+ A core assumption in Git is that a change will be merged more often than
+ it is written, as it is passed around various reviewers.
+ Branches in git are very lightweight: A branch in git is only a reference
+ to a single commit.
+ With its parental commits, the full branch structure can be constructed.
+ Distributed development Like Darcs, BitKeeper, Mercurial, SVK, Bazaar and
+ Monotone, Git gives each developer a local copy of the entire development
+ history, and changes are copied from one such repository to another.
+ These changes are imported as additional development branches, and can
+ be merged in the same way as a locally developed branch.
+ Compatibility with existing systems/protocols Repositories can be published
+ via HTTP, FTP, rsync, or a Git protocol over either a plain socket or ssh.
+ Git also has a CVS server emulation, which enables the use of existing
+ CVS clients and IDE plugins to access Git repositories.
+ Subversion and svk repositories can be used directly with git-svn.
+ Efficient handling of large projects Torvalds has described Git as being
+ very fast and scalable,[23] and performance tests done by Mozilla showed
+ it was an order of magnitude faster than some revision control systems,
+ and fetching revision history from a locally stored repository can be one
+ hundred times faster than fetching it from the remote server.[24][25] In
+ particular, Git does not get slower as the project history grows larger.[26]
+ Cryptographic authentication of history The Git history is stored in such
+ a way that the id of a particular revision (a "commit" in Git terms) depends
+ upon the complete development history leading up to that commit.
+ Once it is published, it is not possible to change the old versions without
+ it being noticed.
+ The structure is similar to a hash tree, but with additional data at the
+ nodes as well as the leaves.[27] (Mercurial and Monotone also have this
+ property.) Toolkit-based design Git was designed as a set of programs written
+ in C, and a number of shell scripts that provide wrappers around those
+ programs.[28] Although most of those scripts have since been rewritten in
+ C for speed and portability, the design remains, and it is easy to chain
+ the components together.[29] Pluggable merge strategies As part of its toolkit
+ design, Git has a well-defined model of an incomplete merge, and it has
+ multiple algorithms for completing it, culminating in telling the user
+ that it is unable to complete the merge automatically and manual editing
+ is required.
+ Garbage accumulates unless collected Aborting operations or backing out
+ changes will leave useless dangling objects in the database.
+ These are generally a small fraction of the continuously growing history
+ of wanted objects.
+ Git will automatically perform garbage collection when enough loose objects
+ have been created in the repository.
+ Garbage collection can be called explicitly using git gc --prune.[30] Periodic
+ explicit object packing Git stores each newly created object as a separate
+ file.
+ Although individually compressed, this takes a great deal of space and
+ is inefficient.
+ This is solved by the use of "packs" that store a large number of objects
+ in a single file (or network byte stream) called "packfile", delta-compressed
+ among themselves.
+ Packs are compressed using the heuristic that files with the same name
+ are probably similar, but do not depend on it for correctness.
+ A corresponding index file is created for each packfile, telling the offset
+ of each object in the packfile.
+ Newly created objects (newly added history) are still stored singly, and
+ periodic repacking is required to maintain space efficiency.
+ The process of packing the repository can be very computationally expensive.
+ By allowing objects to exist in the repository in a loose, but quickly
+ generated format, git allows the expensive pack operation to be deferred
+ until later when time does not matter (e.g.
+ the end of the work day).
+ Git does periodic repacking automatically but manual repacking is also
+ possible with the git gc command.
+ For data integrity, both packfile and its index have SHA-1 checksum inside,
+ and also the file name of packfile contains a SHA-1 checksum.
+ To check integrity, run the git fsck command.
+\end_layout
+
+\begin_layout Standard
+Another property of Git is that it snapshots directory trees of files.
+ The earliest systems for tracking versions of source code, SCCS and RCS,
+ worked on individual files and emphasized the space savings to be gained
+ from interleaved deltas (SCCS) or delta encoding (RCS) the (mostly similar)
+ versions.
+ Later revision control systems maintained this notion of a file having
+ an identity across multiple revisions of a project.
+ However, Torvalds rejected this concept.[31] Consequently, Git does not
+ explicitly record file revision relationships at any level below the source
+ code tree.
+\end_layout
+
+\begin_layout Standard
+Implicit revision relationships have some significant consequences:
+\end_layout
+
+\begin_layout Standard
+It is slightly more expensive to examine the change history of a single
+ file than the whole project.[32] To obtain a history of changes affecting
+ a given file, Git must walk the global history and then determine whether
+ each change modified that file.
+ This method of examining history does, however, let Git produce with equal
+ efficiency a single history showing the changes to an arbitrary set of
+ files.
+ For example, a subdirectory of the source tree plus an associated global
+ header file is a very common case.
+ Renames are handled implicitly rather than explicitly.
+ A common complaint with CVS is that it uses the name of a file to identify
+ its revision history, so moving or renaming a file is not possible without
+ either interrupting its history, or renaming the history and thereby making
+ the history inaccurate.
+ Most post-CVS revision control systems solve this by giving a file a unique
+ long-lived name (a sort of inode number) that survives renaming.
+ Git does not record such an identifier, and this is claimed as an advantage.[33]
+[34] Source code files are sometimes split or merged as well as simply renamed,[
+35] and recording this as a simple rename would freeze an inaccurate description
+ of what happened in the (immutable) history.
+ Git addresses the issue by detecting renames while browsing the history
+ of snapshots rather than recording it when making the snapshot.[36] (Briefly,
+ given a file in revision N, a file of the same name in revision N−1 is
+ its default ancestor.
+ However, when there is no like-named file in revision N−1, Git searches
+ for a file that existed only in revision N−1 and is very similar to the
+ new file.) However, it does require more CPU-intensive work every time history
+ is reviewed, and a number of options to adjust the heuristics.
+\end_layout
+
+\begin_layout Standard
+Git implements several merging strategies; a non-default can be selected
+ at merge time:[37]
+\end_layout
+
+\begin_layout Standard
+resolve: the traditional three-way merge algorithm.
+ recursive: This is the default when pulling or merging one branch, and
+ is a variant of the three-way merge algorithm.
+ "When there are more than one common ancestors that can be used for three-way
+ merge, it creates a merged tree of the common ancestors and uses that as
+ the reference tree for the three-way merge.
+ This has been reported to result in fewer merge conflicts without causing
+ mis-merges by tests done on actual merge commits taken from Linux 2.6 kernel
+ development history.
+ Additionally this can detect and handle merges involving renames."[38] octopus:
+ This is the default when merging more than two heads.
+\end_layout
+
+\begin_layout Standard
+Data structures
+\end_layout
+
+\begin_layout Standard
+Git's primitives are not inherently a source code management (SCM) system.
+ Torvalds explains,[39]
+\end_layout
+
+\begin_layout Standard
+In many ways you can just see git as a filesystem — it's content-addressable,
+ and it has a notion of versioning, but I really really designed it coming
+ at the problem from the viewpoint of a filesystem person (hey, kernels
+ is what I do), and I actually have absolutely zero interest in creating
+ a traditional SCM system.
+\end_layout
+
+\begin_layout Standard
+From this initial design approach, Git has developed the full set of features
+ expected of a traditional SCM,[22] with features mostly being created as
+ needed, then refined and extended over time.
+ Some data flows and storage levels in the Git revision control system.
+\end_layout
+
+\begin_layout Standard
+Git has two data structures: a mutable index that caches information about
+ the working directory and the next revision to be committed; and an immutable,
+ append-only object database.
+\end_layout
+
+\begin_layout Standard
+The object database contains four types of objects:
+\end_layout
+
+\begin_layout Standard
+A blob object is the content of a file.
+ Blob objects have no file name, time stamps, or other metadata.
+ A tree object is the equivalent of a directory.
+ It contains a list of file names, each with some type bits and the name
+ of a blob or tree object that is that file, symbolic link, or directory's
+ contents.
+ This object describes a snapshot of the source tree.
+ A commit object links tree objects together into a history.
+ It contains the name of a tree object (of the top-level source directory),
+ a time stamp, a log message, and the names of zero or more parent commit
+ objects.
+ A tag object is a container that contains reference to another object and
+ can hold additional meta-data related to another object.
+ Most commonly, it is used to store a digital signature of a commit object
+ corresponding to a particular release of the data being tracked by Git.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename figures/Git_data_flow_simplified.svg.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Git data flows 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+The index serves as connection point between the object database and the
+ working tree.
+\end_layout
+
+\begin_layout Standard
+Each object is identified by a SHA-1 hash of its contents.
+ Git computes the hash, and uses this value for the object's name.
+ The object is put into a directory matching the first two characters of
+ its hash.
+ The rest of the hash is used as the file name for that object.
+\end_layout
+
+\begin_layout Standard
+Git stores each revision of a file as a unique blob object.
+ The relationships between the blobs can be found through examining the
+ tree and commit objects.
+ Newly added objects are stored in their entirety using zlib compression.
+ This can consume a large amount of disk space quickly, so objects can be
+ combined into packs, which use delta compression to save space, storing
+ blobs as their changes relative to other blobs.
+ [Ref: http://en.wikipedia.org/wiki/Git_%28software%29]
+\end_layout
+
 \begin_layout Section
 Technologies used for development
 \end_layout
